# Raphael

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HowToUse.md  RAPHAEL_PROJECT.md  README.md  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.sh  데스크톱앱보안해제설치.rtf
agents/: coding_agent.py  note_agent.py  planner_agent.py  research_agent.py  reviewer_agent.py  task_agent.py
config/: settings.py  settings.yaml
core/: activity_log.py  agent_base.py  agent_definitions.py  audit.py  checkpoint.py  claude_provider.py  delegate_state.py  feedback.py  file_picker.py  input_guard.py  mcp_client.py  memory.py  model_router.py  ollama_pool.py  orchestrator.py  plugin_loader.py  profile.py  prompts.py  router_strategy.py  secrets.py  session_store.py  skills.py  testbench.py  tool_runner.py
desktop/: README.md  SIGNING.md  build_sidecar.sh  index.html  package.json  pnpm-lock.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DESKTOP_REFACTOR.md  FEATURES.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SEARCH_UPGRADE.md  SECURITY.md  TESTING.md  UPGRADE_BACKLOG.md  USER_GUIDE.md
interfaces/: cli.py  daemon.py  discord_bot.py  file_watcher.py  health_api.py  slack_bot.py  telegram_bot.py  tray_app.py  voice.py  web_ui.py
memory/: conversation_index.py  obsidian_loader.py  obsidian_writer.py  rag.py
tests/: sandbox.py  test_e2e.py  test_unit.py
tools/: browser_tool.py  calendar_tool.py  clipboard_tool.py  converter_tool.py  email_tool.py  executor.py  fetch_tool.py  file_reader.py  file_writer.py  finetune.py  git_tool.py  (+6 more)
(+15 files in other folders)
